--- a/Tms.MysticShop.Service/Tms.MysticShop.Service.csproj
+++ b/Tms.MysticShop.Service/Tms.MysticShop.Service.csproj
@@ -41,8 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\BillDetailService.cs" />
+    <Compile Include="Service\BillService.cs" />
+    <Compile Include="Service\CategoryService.cs" />
+    <Compile Include="Service\ColorService.cs" />
+    <Compile Include="Service\ImageService.cs" />
+    <Compile Include="Service\ProductDetailService.cs" />
+    <Compile Include="Service\ProductService.cs" />
+    <Compile Include="Service\SizeService.cs" />
+    <Compile Include="Service\UserRoleService.cs" />
+    <Compile Include="Service\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Tms.MysticShop.Common\Tms.MysticShop.Common.csproj">
