--- a/Tms.MysticShop.Web/Tms.MysticShop.Web.csproj
+++ b/Tms.MysticShop.Web/Tms.MysticShop.Web.csproj
@@ -199,6 +199,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Core\ApiControllerBase.cs" />
+    <Compile Include="Infrastructure\Core\PaginationSet.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
     <Compile Include="Models\BillDetailViewModel.cs" />
     <Compile Include="Models\BillViewModel.cs" />
@@ -223,7 +224,16 @@
     <Content Include="app\components\bills\billListView.html" />
     <Content Include="app\components\home\homeController.js" />
     <Content Include="app\components\home\homeView.html" />
+    <Content Include="app\components\users\user.module.js" />
+    <Content Include="app\components\users\userListController.js" />
+    <Content Include="app\components\users\userListView.html" />
+    <Content Include="app\components\user_roles\userRoleListController.js" />
+    <Content Include="app\components\user_roles\userRoleListView.html" />
+    <Content Include="app\components\user_roles\userroles.module.js" />
+    <Content Include="app\shared\directives\pagerDirective.html" />
+    <Content Include="app\shared\directives\pagerDirective.js" />
     <Content Include="app\shared\modules\tmsmysticshop.common.js" />
+    <Content Include="app\shared\services\apiService.js" />
     <Content Include="Assets\css\adminlte.css" />
     <Content Include="Assets\css\adminlte.min.css" />
     <Content Include="Assets\css\alt\adminlte.components.css" />
@@ -356,7 +366,6 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="Scripts\spa\app.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -381,12 +390,10 @@
     <Folder Include="app\components\products\" />
     <Folder Include="app\components\product_details\" />
     <Folder Include="app\components\sizes\" />
-    <Folder Include="app\components\users\" />
-    <Folder Include="app\components\user_roles\" />
     <Folder Include="app\shared\footer\" />
     <Folder Include="app\shared\navigation\" />
-    <Folder Include="app\shared\services\" />
     <Folder Include="App_Data\" />
+    <Folder Include="Infrastructure\Extentions\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
